# mx-reproducible-contract-build-example-sc

./: .gitignore  Cargo.toml  README.md
.github/: release.yml
.github/workflows/: build.yml  ci.yml  create_release.yml  on_pull_request_build_contracts.yml  on_release_build_contracts.yml  release-create.yml  release-extend.yml  release.yml  test1.yml  test2.yml  test3.yml  test4.yml
adder/: .gitignore  Cargo.toml
adder/meta/: Cargo.toml
adder/wasm/: Cargo.toml
lottery-esdt/: Cargo.toml
lottery-esdt/meta/: Cargo.toml
lottery-esdt/wasm/: Cargo.toml
multisig/: Cargo.toml
multisig/meta/: Cargo.toml
multisig/wasm/: Cargo.toml
multisig/wasm-multisig-full/: Cargo.toml
multisig/wasm-multisig-view/: Cargo.toml
