[package]
name = "multisig"
version = "0.0.0"
authors = [ "you",]
edition = "2018"
publish = false

[lib]
path = "src/multisig.rs"

[dev-dependencies]
num-bigint = "0.4.2"
num-traits = "0.2"
hex = "0.4"

[dependencies.multiversx-sc]
version = "0.43.3"

[dependencies.multiversx-sc-modules]
version = "0.43.3"

[dev-dependencies.multiversx-sc-scenario]
version = "0.43.3"

[dev-dependencies.adder]

[dev-dependencies.factorial]

[dev-dependencies.multiversx-wegld-swap-sc]
version = "0.43.3"
